# ib_async

./: .buildinfo  .gitignore  LICENSE  README.md  README.rst  api.html  changelog.html  code.html  genindex.html  index.html  links.html  notebooks.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  recipes.html  search.html  searchindex.js  setup.py
.doctrees/: api.doctree  changelog.doctree  code.doctree  environment.pickle  index.doctree  links.doctree  notebooks.doctree  readme.doctree  recipes.doctree
.github/: FUNDING.yml
.github/workflows/: docs.yml  test.yml
_modules/: index.html
_modules/ib_async/: client.html  contract.html  flexreport.html  ib.html  ibcontroller.html  objects.html  order.html  ticker.html  util.html  wrapper.html
_sources/: api.rst.txt  changelog.rst.txt  code.rst.txt
docs/: changelog.rst  code.rst  conf.py  index.rst  links.rst  notebooks.rst  readme.rst  recipes.rst
examples/: place-order-snap-mid.py  qt_ticker_table.py  tk.py
ib_async/: __init__.py  client.py  connection.py  contract.py  decoder.py  flexreport.py  ib.py  ibcontroller.py  objects.py  order.py  ticker.py  util.py  version.py  wrapper.py
ib_insync/: __init__.py  client.py  connection.py  contract.py  decoder.py  flexreport.py  ib.py  ibcontroller.py  objects.py  ticker.py  util.py  version.py  wrapper.py
notebooks/: bar_data.ipynb  basics.ipynb  contract_details.ipynb  market_depth.ipynb  option_chain.ipynb  ordering.ipynb  scanners.ipynb  tick_data.ipynb
tests/: conftest.py  test_contract.py  test_requests.py  test_util.py
